<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView_stepDetails_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:default_artwork="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@+id/textView_stepDetails_description"
            app:layout_constraintDimensionRatio="w,16:9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:resize_mode="fit"
            app:use_artwork="true"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_stepDetails_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="@dimen/textSize_stepDetails_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/playerView_stepDetails_video"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_stepDetails_previousStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_previous_step"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_stepDetails_nextStep"
            app:layout_constraintTop_toBottomOf="@+id/textView_stepDetails_description"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_stepDetails_nextStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_next_step"
            app:layout_constraintLeft_toRightOf="@+id/button_stepDetails_previousStep"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_stepDetails_description"/>
    </android.support.constraint.ConstraintLayout>
</layout>