<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_listItemRecipeDetailsStepsIngredient_ingredientTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical|start"
            android:minHeight="50dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/textView_listItemRecipeDetailsStepsIngredient_ingredientQuantity"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nutella or other chocolate-hazelnut spread"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView_listItemRecipeDetailsStepsIngredient_ingredientQuantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical|end"
            android:minWidth="50dp"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/textView_listItemRecipeDetailsStepsIngredient_ingredientTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="500 G"/>
    </android.support.constraint.ConstraintLayout>
</layout>