<resources>
    <string name="app_name">Baking App</string>

    <string name="message_no_recipes">Looks like there aren\'t any recipes available currently.</string>
    <string name="message_no_recipe_selected">Please select a recipe to display ingredients in widget.</string>

    <string name="message_placeholder_widget_select_recipe">Please select a recipe to show its ingredients</string>

    <string name="label_ingredients">Ingredients</string>
    <string name="label_ingredient">Ingredient</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_previous_step">Previous Step</string>
    <string name="label_next_step">Next Step</string>

    <string name="serving_size">Serves: %d</string>
    <string name="ingredient_quantity">%.2f %s</string>

    <string name="select_recipe">Select recipe</string>
    <string name="label_add_widget">Add widget</string>

    <string name="PREFS_NAME" translatable="false">com.varunbarad.bakingapp</string>
    <string name="PREFS_KEY_RECIPE_TIMESTAMP" translatable="false">recipe_timestamp</string>
</resources>
